chore(ignore): add .idea directory

--- a/.gitignore
+++ b/.gitignore
@@ -326,3 +326,4 @@ gradle-app.setting
 *.hprof
 
 # End of https://www.toptal.com/developers/gitignore/api/maven,gradle,intellij,intellij+all,intellij+iml,visualstudiocode,sublimetext
+/.idea/
